--- a/tabularfm/configs/ft_stvae.yaml
+++ b/tabularfm/configs/ft_stvae.yaml
@@ -1,4 +1,5 @@
 split_path: 'toy_split_3sets.json' # None
+split_set: 'val' # name of target set (val or test) 
 split_random_state: 121 # if split_path is None, split data following this random state
 verbose: True
 model_cfg:
@@ -10,3 +11,5 @@ training_cfg:
   batch_size: 500
   lr: 1.e-4
   optimizers: 'adam'
+  checkpoint_n_epoch: 20 # checkpoint every n epochs
+  early_stopping: True # early stop in fine-tuning and single-training
