--- a/tabularfm/configs/stvae.yaml
+++ b/tabularfm/configs/stvae.yaml
@@ -1,15 +1,26 @@
 split_path: 'toy_split_3sets.json' # None
+split_set: 'val'
 split_random_state: 121 # if split_path is None, split data following this random state
 verbose: True
 model_cfg:
   embedding_dim: 128
   encoder_dims: [512, 256, 256, 128]
   decoder_dims: [128, 256, 256, 512]
-  pretrained_llm: 'distilbert-base-uncased' # pretrained llm model to embed column name as signature
-training_cfg:
+pretrain_cfg:
   epochs: 10
   batch_size: 500
   lr: 1.e-4
   optimizers: 'adam'
   checkpoint_n_epoch: 20 # checkpoint every n epochs
-  optimize_signature: False # whether to additionally optimize the signature or not
+finetune_cfg:
+  epochs: 10
+  batch_size: 500
+  lr: 1.e-4
+  optimizers: 'adam'
+  early_stopping: True # early stop in fine-tuning and single-training
+fromscratch_cfg:
+  epochs: 10
+  batch_size: 500
+  lr: 1.e-4
+  optimizers: 'adam'
+  early_stopping: True # early stop in fine-tuning and single-training
