--- a/configs/great.yaml
+++ b/configs/great.yaml
@@ -1,5 +1,5 @@
 split_path: 'toy_split_3sets.json' # None
-split_set: 'val'
+split_set:
 split_random_state: 121 # if split_path is None, split data following this random state
 verbose: True
 model_cfg:
