Add config option to init model from scratch

--- a/configs/great.yaml
+++ b/configs/great.yaml
@@ -6,6 +6,7 @@ model_cfg:
   pretrained_llm: 'distilgpt2'
   pretrained_tokenizer: 'distilgpt2'
   token_max_length: 512
+  init_from_scratch: False
 pretrain_cfg:
   epochs: 2
   batch_size: 32
